# databricks-app-utils

./: .env  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml  release.yml
docs/: authentication.md
src/databricks_app_utils/: auth.py  databricks_client.py  query_registry.py  settings.py  sql_client.py  workspace_client.py
tests/: test_auth.py  test_databricks_client.py  test_query_registry.py  test_settings.py  test_sql_client.py  test_workspace_client.py
tests/integration/: conftest.py  test_sql_client.py
